--- a/speakers/chua.html
+++ b/speakers/chua.html
@@ -10,8 +10,10 @@
 
 <body>
 	<main>
-		<h1>Amy Chua</h1>
-		<h2>This page is under construction.</h2>
+		<section>
+			<h1>Amy Chua</h1>
+			<h2>This page is under construction.</h2>
+		</section>
 	</main>
 </body>
 
