--- a/speakers/brancaccio.html
+++ b/speakers/brancaccio.html
@@ -10,9 +10,10 @@
 
 <body>
 	<main>
-		<h1>David Brancaccio</h1>
-		<h2>This page is under construction.</h2>
-		<p><a href="../c3_index.html">Return to home page.</a></p>
+		<section>
+			<h1>David Brancaccio</h1>
+			<h2>This page is under construction.</h2>
+		</section>
 	</main>
 </body>
 
